--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/animations": "^11.2.7",
     "@angular/common": "^7.2.2",
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.2",
@@ -57,6 +58,7 @@
     "ionic-cache": "^5.2.0",
     "jquery": "^3.5.0",
     "moment": "^2.24.0",
+    "ngx-spinner": "^7.2.0",
     "rxjs": "^6.5.5",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.9.0",
